--- a/arch/arm/configs/mxs_imx280a_defconfig
+++ b/arch/arm/configs/mxs_imx280a_defconfig
@@ -1773,7 +1773,7 @@ CONFIG_SND_VERBOSE_PROCFS=y
 # CONFIG_SND_OPL4_LIB_SEQ is not set
 CONFIG_SND_DRIVERS=y
 # CONFIG_SND_DUMMY is not set
-# CONFIG_SND_ALOOP is not set
+CONFIG_SND_ALOOP=y
 # CONFIG_SND_MTPAV is not set
 # CONFIG_SND_SERIAL_U16550 is not set
 # CONFIG_SND_MPU401 is not set
